# gc-analyze

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  gc-analyze.py  pyproject.toml
src/gc_analyze/: __init__.py  cli.py
